--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="app"></div>
     <div id="modal"></div>
+    <div id="toast"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
